[gd_scene load_steps=15 format=2]

[ext_resource path="res://Entities/fire/fire.gd" type="Script" id=1]
[ext_resource path="res://Components/hitbox/hitbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/fire/fire.png" type="Texture" id=3]
[ext_resource path="res://Effects/Particles/smoke_particles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Components/sound_player/sound/sound.tscn" type="PackedScene" id=5]
[ext_resource path="res://Entities/fire/fire.wav" type="AudioStream" id=6]
[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=7]
[ext_resource path="res://Effects/light.png" type="Texture" id=8]
[ext_resource path="res://Effects/LightSource.gd" type="Script" id=9]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[sub_resource type="CircleShape2D" id=2]
radius = 6.0

[sub_resource type="Animation" id=3]
resource_name = "death"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 0.5, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("light:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
length = 0.5
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4 ]
}

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[node name="fire" type="KinematicBody2D"]
collision_layer = 2
script = ExtResource( 1 )
ACCELERATION = 0
INANIMATE = true
truName = "fire"
smoke_particle = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 3 )
hframes = 3
vframes = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
modulate = Color( 0.121569, 0.352941, 0.964706, 1 )
shape = SubResource( 1 )

[node name="hitbox" parent="." instance=ExtResource( 2 )]
visible = false
COOLDOWN = 1.0
DAM_TYPE = "burn"
KNOCKBACK = 0
STATUS_EFFECT = "burning"
STATUS_DURATION = 2.1

[node name="CollisionShape2D" parent="hitbox" index="0"]
shape = SubResource( 2 )

[node name="animation" type="AnimationPlayer" parent="."]
autoplay = "fire"
anims/death = SubResource( 3 )
anims/fire = SubResource( 4 )

[node name="fuel" type="Timer" parent="."]
wait_time = 2.5
one_shot = true
autostart = true
__meta__ = {
"_editor_description_": ""
}

[node name="spread" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="detection" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection"]
shape = SubResource( 5 )

[node name="sound_player" parent="." instance=ExtResource( 7 )]
FREE_WHEN_EMPTY = false

[node name="fire" parent="sound_player" instance=ExtResource( 5 )]
stream = ExtResource( 6 )
bus = "Master"
MODE = 2

[node name="light" type="Light2D" parent="."]
texture = ExtResource( 8 )
color = Color( 0.956863, 0.537255, 0.368627, 1 )
energy = 2.0
mode = 2
shadow_enabled = true
shadow_buffer_size = 512
script = ExtResource( 9 )

[connection signal="tree_exited" from="." to="." method="_on_fire_tree_exited"]
[connection signal="area_entered" from="hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="fuel" to="." method="_on_fuel_timeout"]
[connection signal="timeout" from="spread" to="." method="_on_spread_timeout"]

[editable path="hitbox"]
